--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@grammarly/editor-sdk-vue": "^2.3.9",
     "@mdi/js": "^7.1.96",
     "axios": "^1.1.3",
     "mdi-vue": "^3.0.13",
