--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
   },
   "dependencies": {
     "@grammarly/editor-sdk-vue": "^2.3.9",
+    "@heroicons/vue": "^2.0.16",
+    "@iconify/vue": "^4.1.0",
     "@mdi/js": "^7.1.96",
+    "@stripe/stripe-js": "^1.52.0",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.1.3",
+    "chart.js": "^4.2.1",
+    "flutterwave": "^2.2.8",
+    "framework7-vue": "^7.1.5",
     "mdi-vue": "^3.0.13",
-    "pinia": "^2.0.23",
+    "pinia": "^2.0.33",
+    "sass": "^1.58.3",
+    "stripe-card-validator": "^1.0.1",
+    "sweetalert2": "11.1.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
+    "vue3-datepicker": "^0.3.4",
+    "vue3-daterange-picker": "^1.0.1",
     "vue3-icon": "^2.1.0",
     "vuetify": "^3.1.2"
   },
