--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "flutterwave": "^2.2.8",
     "framework7-vue": "^7.1.5",
     "mdi-vue": "^3.0.13",
+    "moment": "^2.29.4",
     "pinia": "^2.0.33",
     "sass": "^1.58.3",
     "stripe": "^11.17.0",
     "stripe-card-validator": "^1.0.1",
-    "sweetalert2": "11.1.4",
+    "sweetalert2": "^11.1.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
     "vue3-datepicker": "^0.3.4",
