--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sweetalert2": "^11.1.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
+    "vue-star-rating": "^2.1.0",
     "vue3-datepicker": "^0.3.4",
     "vue3-daterange-picker": "^1.0.1",
     "vue3-icon": "^2.1.0",
